View Issue Details

IDProjectCategoryView StatusLast Update
0023032Open CASCADEOCCT:Modeling Algorithmspublic2012-03-29 17:26
Reportervro Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2005 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0023032: A crash of a draw-command voxeloctboolds on MMGT_OPT=0, MMGT_REENTRANT=1
DescriptionThe crash is occured in Voxel_OctBoolDS::OptimizeMemory().
Steps To Reproduceset MMGT_OPT=0
set MMGT_REENTRANT=1
voxeloctboolds
TagsNo tags attached.
Test case numbertest case is not required

Relationships

has duplicate 0022973 closedabv The result of several testing cases is invalid with MMGT_OPT set to 0 
related to 0022627 closedbugmaster Change OCCT memory management defaults 

Activities

vro

2012-03-21 14:53

developer   ~0020063

Dear Julia,
Review please my fix.
In brief, I modified the method Voxel_OctBoolDS::OptimizeMemory(). The method "unsplits" (unifies) small voxels into one bigger voxel in case of all small voxels have the same value.
There was a simple mistake. I deleted the small voxels inside an iteration within a data map. The fix concerns removal of the voxels outside of the iteration process.
Any questions are welcome!

vro

2012-03-21 14:54

developer   ~0020064

I forgot to say that the fix is located in SVN: http://svn/svn/occt/branches/23032

jgv

2012-03-22 12:22

developer   ~0020089

Small correction: parentheses to precise the precedence of operations

vro

2012-03-22 14:53

developer   ~0020098

Thank you!

aan

2012-03-26 14:16

developer   ~0020136

Dear BugMaster,

SVN branch http://svn/svn/occt/branches/23032 has been moved to GIT CR23032 one.

Workbench KAS:dev:aan-23032-occt was created from git branch CR23032
(and aan-23032-products from svn trunk) and compiled on Linux platform.

There are following improvements in aan-23032-products regarding to
KAS:dev:products-20120321-opt

chl 936 G9

See results in
/QADisk/occttests/results/KAS/dev/aan-23032-products_23032012/lin
See reference results in
/QADisk/occttests/results/KAS/dev/products-2012021-opt_22032012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following
instructions
http://doc/doku.php?id=occt:certification

bugmaster

2012-03-27 16:41

administrator   ~0020171

Integrated into master

Related Changesets

occt: master d5e4971b

2012-03-22 12:22:26

vro


Committer: bugmaster Details Diff
0023032: A crash of a draw-command voxeloctboolds on MMGT_OPT=0, MMGT_REENTRANT=1 Affected Issues
0023032
mod - src/Voxel/Voxel_OctBoolDS.cxx Diff File

Issue History

Date Modified Username Field Change
2012-03-21 12:34 vro New Issue
2012-03-21 12:34 vro Assigned To => vro
2012-03-21 12:40 abv Relationship added related to 0022627
2012-03-21 14:05 abv Status new => assigned
2012-03-21 14:06 abv Relationship added has duplicate 0022973
2012-03-21 14:51 vro Assigned To vro => jgv
2012-03-21 14:53 vro Note Added: 0020063
2012-03-21 14:53 vro Status assigned => resolved
2012-03-21 14:54 vro Note Added: 0020064
2012-03-22 12:22 jgv Note Added: 0020089
2012-03-22 12:22 jgv Status resolved => reviewed
2012-03-22 13:10 mkv Assigned To jgv => aan
2012-03-22 14:53 vro Note Added: 0020098
2012-03-26 14:16 aan Note Added: 0020136
2012-03-26 14:17 aan Test case number => test case is not required
2012-03-26 14:17 aan Status reviewed => tested
2012-03-27 16:41 bugmaster Note Added: 0020171
2012-03-27 16:41 bugmaster Status tested => verified
2012-03-27 16:41 bugmaster Resolution open => fixed
2012-03-27 16:41 bugmaster Assigned To aan => vro
2012-03-29 17:26 bugmaster Changeset attached => occt master d5e4971b